fix the main page picture too big bug

--- a/src/views/Home/scss/index.scss
+++ b/src/views/Home/scss/index.scss
@@ -17,7 +17,7 @@
       align-items: center;
       display: flex;
       flex-direction: column;
-      height: calc(100vh - 56px);
+      min-height: calc(50vh - 56px);
       justify-content: space-between;
       padding: $spacer;
 
